[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/ui/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/ui/title_screen.jpg" type="Texture" id=2]
[ext_resource path="res://assets/fonts/cinzel_button.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/audio/music/piano_main_menu.ogg" type="AudioStream" id=4]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="SplashLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.613
anchor_right = 0.5
anchor_bottom = 0.613
margin_left = -266.0
margin_top = -31.8
margin_right = 334.0
margin_bottom = 32.2
custom_colors/font_color = Color( 0.85, 0.8, 0.7, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Press ENTER to begin"
align = 1
valign = 1

[node name="MenuContainer" type="CenterContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.55
anchor_right = 0.5
anchor_bottom = 0.9
margin_left = -165.0
margin_right = 235.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer"]
margin_left = 92.0
margin_top = 81.0
margin_right = 308.0
margin_bottom = 297.0
custom_constants/separation = 20

[node name="NewGameButton" type="Button" parent="MenuContainer/VBoxContainer"]
margin_right = 192.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
custom_colors/font_color = Color( 0.85, 0.8, 0.7, 1 )
custom_colors/font_color_hover = Color( 1, 0.95, 0.85, 1 )
custom_colors/font_color_pressed = Color( 0.7, 0.6, 0.5, 1 )
custom_fonts/font = ExtResource( 3 )
text = "New Game"
flat = true

[node name="ContinueButton" type="Button" parent="MenuContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 192.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 32 )
custom_colors/font_color_disabled = Color( 0.4, 0.4, 0.4, 1 )
custom_colors/font_color = Color( 0.85, 0.8, 0.7, 1 )
custom_colors/font_color_hover = Color( 1, 0.95, 0.85, 1 )
custom_colors/font_color_pressed = Color( 0.7, 0.6, 0.5, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Continue Game"
flat = true

[node name="SettingsButton" type="Button" parent="MenuContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 192.0
margin_bottom = 136.0
rect_min_size = Vector2( 0, 32 )
custom_colors/font_color = Color( 0.85, 0.8, 0.7, 1 )
custom_colors/font_color_hover = Color( 1, 0.95, 0.85, 1 )
custom_colors/font_color_pressed = Color( 0.7, 0.6, 0.5, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Settings"
flat = true

[node name="QuitButton" type="Button" parent="MenuContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 192.0
margin_bottom = 190.0
rect_min_size = Vector2( 0, 32 )
custom_colors/font_color = Color( 0.85, 0.8, 0.7, 1 )
custom_colors/font_color_hover = Color( 1, 0.95, 0.85, 1 )
custom_colors/font_color_pressed = Color( 0.7, 0.6, 0.5, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Quit"
flat = true

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="LoopTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="finished" from="MusicPlayer" to="." method="_on_MusicPlayer_finished"]
[connection signal="timeout" from="LoopTimer" to="." method="_on_LoopTimer_timeout"]
